@@ -31,6 +31,8 @@
 * Allow HARP to import HDF5 files that are generated by the netCDF4 library
   (allow numeric attributes to be 1-element arrays instead of scalars).
 
+* harpcheck now returns with exit code 1 if any of the imports fail.
+
 * Fix performance issue with spatial filtering on systems with slow math lib.
 
 * Fixed mapping description of GOME2 L1 product ingestion.
